--- a/app/views/lots/index.html.haml
+++ b/app/views/lots/index.html.haml
@@ -1,23 +1,25 @@
-%h2#page_title #{h @account.name} Lots in #{h @account.parent.name}
-%table#lots_table.list{ cellspacing: 0, cellpadding: 0}
-  %tr
-    %th Purchase date
-    %th Shares owned
-    %th Price
-    %th Cost
-    %th Current value
-    %th Gain/loss
-    %th &nbsp;
-  -@lots.each do |lot|
-    %tr
-      %td.number_column= format_date(lot.purchase_date)
-      %td.number_column= format_shares(lot.shares_owned)
-      %td.number_column= format_price(lot.price)
-      %td.number_column= format_currency(lot.cost)
-      %td.number_column= format_currency(lot.current_value)
-      %td.number_column= format_currency(lot.gains)
-      %td.action_cell
-        =link_to 'Split', new_split_commodity_path(lot.commodity, account_id: @account.id), class: 'split_button', title: 'Click here to record a stock split.'
-        =link_to 'Transfer', new_transfer_lot_path(lot, account_id: @account.id), class: 'transfer_button', title: 'Click here to transfer this lot to another account.'
-.actions
-  =link_to 'Back', holdings_account_path(@account.parent), class: 'back_button', title: 'Click here to return to the account holdings page.'
+.row
+  .col-md-6.col-md-offset-3
+    %h2#page_title #{h @account.name} Lots in #{h @account.parent.name}
+    %table#lots_table.list{ cellspacing: 0, cellpadding: 0}
+      %tr
+        %th Purchase date
+        %th Shares owned
+        %th Price
+        %th Cost
+        %th Current value
+        %th Gain/loss
+        %th &nbsp;
+      -@lots.each do |lot|
+        %tr
+          %td.number_column= format_date(lot.purchase_date)
+          %td.number_column= format_shares(lot.shares_owned)
+          %td.number_column= format_price(lot.price)
+          %td.number_column= format_currency(lot.cost)
+          %td.number_column= format_currency(lot.current_value)
+          %td.number_column= format_currency(lot.gains)
+          %td.action_cell
+            =link_to 'Split', new_split_commodity_path(lot.commodity, account_id: @account.id), class: 'split_button', title: 'Click here to record a stock split.'
+            =link_to 'Transfer', new_transfer_lot_path(lot, account_id: @account.parent.id), class: 'transfer_button', title: 'Click here to transfer this lot to another account.'
+    .actions
+      =link_to 'Back', holdings_account_path(@account.parent), class: 'back_button', title: 'Click here to return to the account holdings page.'
