--- a/app/views/lots/index.html.haml
+++ b/app/views/lots/index.html.haml
@@ -21,5 +21,6 @@
           %td.action_cell
             =link_to 'Split', new_split_commodity_path(lot.commodity, account_id: @account.id), class: 'split_button', title: 'Click here to record a stock split.'
             =link_to 'Transfer', new_transfer_lot_path(lot, account_id: @account.parent.id), class: 'transfer_button', title: 'Click here to transfer this lot to another account.'
+            =link_to 'Exchange', new_exchange_lot_path(lot, account_id: @account.parent.id), class: 'exchange_button', title: 'Click here to exchange these share for shares of another commodity.'
     .actions
       =link_to 'Back', holdings_account_path(@account.parent), class: 'back_button', title: 'Click here to return to the account holdings page.'
