[#94758038] add fee to commodity purchase transactions

--- a/app/views/accounts/new_commodity_transaction.html.haml
+++ b/app/views/accounts/new_commodity_transaction.html.haml
@@ -23,5 +23,9 @@
       =f.label :value
       %br
       =f.number_field :value
+    %div
+      =f.label :fee
+      %br
+      =f.number_field :fee
   .actions
     =submit_tag 'Save', class: 'save_button'
