only show root accounts, include expand buttons

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -352,6 +352,11 @@ table.attributes {
   background-image: image-url("exchange_small.png");
 }
 
+.expand_button {
+  @extend .any_small_button;
+  background-image: image-url("expand.png")
+}
+
 .standard_button {
   background-color: $white;
   border: 3px solid $dark-grey;
