prevent children from being loaded prematurely

--- a/app/views/pages/app/_accounts.html.haml
+++ b/app/views/pages/app/_accounts.html.haml
@@ -16,5 +16,5 @@
         %td.number_column{ data: { bind: "text: formattedValueWithChildren,click: display" }}
         %td.action_cell
           %a.small_edit_button{ data: { bind: "visible: canEdit(), click: edit" }, href: '#', title: 'Click here to edit this account.' } Edit
-          %a.small_delete_button{ data: { bind: "visible: canDestroy(), click: destroy" }, href: '#', title: 'Click here to delete this account.' } Delete
+          %a.small_delete_button{ data: { bind: "visible: showDeleteButton(), click: destroy" }, href: '#', title: 'Click here to delete this account.' } Delete
       <!-- /ko -->
