--- a/app/views/accounts/_accounts_table.html.haml
+++ b/app/views/accounts/_accounts_table.html.haml
@@ -1,4 +1,4 @@
-%table#accounts_table.list{:cellspacing => 0, :cellpadding => 0}
+%table#accounts_table.table.table-striped
   %tr
     %th Name
     %th Balance
@@ -14,6 +14,10 @@
       %td.number_column= format_currency(record.balance)
       %td.action_cell
         -if record.account
-          = link_to "Edit", edit_account_path(record.account), class: 'edit_button', title: 'Click here to edit this account.'
-          = link_to "Reconcile", new_account_reconciliation_path(record.account), class: 'reconcile_button', title: 'Click here to reconcile this account with a bank statement.'
-          = render "shared/delete_form", :resource => record.account, :url => account_path(record.account)
+          .row
+            .col-md-1
+              =edit_link edit_account_path(record.account), 'Click here to edit this account.'
+            .col-md-5
+              =link_to "Reconcile", new_account_reconciliation_path(record.account), class: 'btn btn-xs btn-default', title: 'Click here to reconcile this account with a bank statement.'
+            .col-md-1
+              =delete_link account_path(record.account), 'Click here to delete this account.', 'Are you sure you want to delete this account?'
