--- a/app/views/accounts/_form_fields.html.haml
+++ b/app/views/accounts/_form_fields.html.haml
@@ -14,6 +14,6 @@
   =f.label :name
   %br
   =f.text_field :name, :class => 'form-control'
-.actions
-  =f.submit "Save", class: 'save_button', title: 'Click here to save the account.'
-  =link_to 'Back', entity_accounts_path(account.entity), class: 'back_button', title: 'Click here to return to the list of accounts.'
+.actions.btn-group
+  =f.submit "Save", class: 'btn btn-primary', title: 'Click here to save the account.'
+  =link_to 'Back', entity_accounts_path(account.entity), class: 'btn btn-default', title: 'Click here to return to the list of accounts.'
