--- a/app/views/entities/_entity_list.html.haml
+++ b/app/views/entities/_entity_list.html.haml
@@ -1,12 +1,17 @@
-%table#entities_table.list{cellspacing: 0, cellpadding:0}
-  %tr
-    %th Name
-    %th.action_cell &nbsp;
-  -entities.each do |entity|
-    %tr{id: "entity_#{entity.id}" }
-      %td= link_to entity.name, entity_path(entity)
-      %td.action_cell
-        =link_to "Edit", edit_entity_path(entity), class: 'edit_button', title: 'Click here to edit the entity'
-        =render "shared/delete_form", resource: entity, url: entity_url(entity)
-.actions
-  =link_to 'Add', new_entity_path, class: 'add_button'
+.row
+  .col-md-4.col-md-offset-4
+    %table#entities_table.table.table-striped
+      %tr
+        %th Name
+        %th.action_cell &nbsp;
+      -entities.each do |entity|
+        %tr{id: "entity_#{entity.id}" }
+          %td.col-md-6= link_to entity.name, entity_path(entity)
+          %td.col-md-2.action_cell
+            .row
+              .col-md-1
+                =edit_link edit_entity_path(entity), 'Click here to edit this entity.'
+              .col-md-1
+                =delete_link entity_path(entity), 'Click here to remove this entity.', 'Are you sure you want to delete this entity?'
+    .btn-group
+      =link_to 'Add', new_entity_path, class: 'btn btn-default'
