--- a/app/views/entities/_entity_list.html.haml
+++ b/app/views/entities/_entity_list.html.haml
@@ -6,7 +6,7 @@
         %th.action_cell &nbsp;
       -entities.each do |entity|
         %tr{id: "entity_#{entity.id}" }
-          %td.col-md-6= link_to entity.name, entity_path(entity)
+          %td.col-md-6= link_to entity.name, entity_accounts_path(entity)
           %td.col-md-2.action_cell
             .row
               .col-md-1
