--- a/app/views/entities/_entity_list.html.haml
+++ b/app/views/entities/_entity_list.html.haml
@@ -10,8 +10,8 @@
           %td.col-md-2.action_cell
             .row
               .col-md-1
-                =edit_link edit_entity_path(entity), 'Click here to edit this entity.'
+                =edit_link edit_entity_path(entity), 'this entity.'
               .col-md-1
-                =delete_link entity_path(entity), 'Click here to remove this entity.', 'Are you sure you want to delete this entity?'
+                =delete_link entity_path(entity), 'this entity'
     .btn-group
       =link_to 'Add', new_entity_path, class: 'btn btn-default'
