--- a/app/views/attachments/index.html.haml
+++ b/app/views/attachments/index.html.haml
@@ -11,7 +11,7 @@
       %td= attachment.content_type
       %td.action_cell
         =link_to 'View', attachment_content_path(attachment.attachment_content_id), class: 'show_button', title: 'Click here to view the attachment.'
-        =render 'shared/delete_form', resource: attachment, url: attachment_url(attachment)
+        =delete_link attachment_path(attachment), 'this attachment'
 .actions
   =link_to 'Add', new_transaction_attachment_path(@transaction), class: 'add_button', title: 'Click here to add a new attachment.'
   =link_to 'Back', entity_transactions_path(@transaction.entity), class: 'back_button', title: 'Click here to return to the list of transactions.'
