--- a/app/views/entities/edit.html.haml
+++ b/app/views/entities/edit.html.haml
@@ -1,7 +1,8 @@
-.row
-  .col-md-4.col-md-offset-4
-    %h2#page_title Edit entity
+=content_for :page_title do
+  Edit entity
 
+.row
+  .col-md-4
     =render "shared/errors", :resource => @entity
 
     =form_for(@entity) do |f|  
