--- a/app/views/entities/new.html.haml
+++ b/app/views/entities/new.html.haml
@@ -1,7 +1,8 @@
-.row
-  .col-md-4.col-md-offset-4
-    %h2#page_title New entity
+=content_for :page_title do
+  New entity
 
+.row
+  .col-md-4
     =render "shared/errors", :resource => @entity
     =render 'shared/errors', :resource => @importer
     -if @error_message
