--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -1,7 +1,8 @@
-.row
-  .col-md-4.col-md-offset-4
-    %h2#page_title Edit account
+=content_for :page_title do
+  Edit account
 
+.row
+  .col-md-4
     =render "shared/errors", :resource => @account
 
     =form_for(@account) do |f|  
