--- a/app/views/shared/_errors.html.haml
+++ b/app/views/shared/_errors.html.haml
@@ -1,4 +1,5 @@
 -if resource.errors.any?
-  %ul#errors
-    -resource.errors.full_messages.each do |message|
-      %li= message
+  .alert.alert-warning
+    %ul#errors
+      -resource.errors.full_messages.each do |message|
+        %li= message
