--- a/app/views/transactions/_form_fields.html.haml
+++ b/app/views/transactions/_form_fields.html.haml
@@ -1,37 +1,35 @@
-:javascript
-  function removeTransactionItem(index) {
-    $("#transaction_item_" + index).hide();
-    $("#transaction_items_attributes_" + index + "__destroy").val('1');
-  }
-  
-=f.text_field :transaction_date, class: 'date_field transaction_date_field', autofocus: true
-=f.text_field :description, class: 'transaction_description_field', placeholder: 'description'
+.form-group
+  =label_tag 'transaction[transaction_date]'
+  =text_field_tag 'transaction[transaction_date]', transaction.transaction_date, class: 'date_field form-control', autofocus: true
+.form-group
+  =label_tag 'transaction[description]'
+  =text_field_tag 'transaction[description]', transaction.description, class: 'transaction_description_field form-control'
 
-.new_transaction_items_container
-  %table#transaction_items_table.list{cellspacing: 0, cellpadding: 0}
-    %tr
-      %th Account
-      %th Action
-      %th Memo
-      %th Confirmation
-      %th Amount
-      %th &nbsp;
-    -items.each_with_index do |item, index|
-      =f.fields_for :items, item do |item_form|
-        %tr{ id: "transaction_item_#{index}" }
-          %td
-            =item_form.hidden_field :id
-            =hidden_field_tag "transaction[items_attributes][#{index}][_destroy]"
-            =item_form.label :account_id, style: 'display: none'
-            =item_form.select :account_id, grouped_options_for_select(available_accounts(transaction.entity), item.account_id)
-          %td
-            =item_form.label :action
-            =item_form.select :action, [:credit, :debit]
-          %td= item_form.text_field :memo, placeholder: 'memo'
-          %td= item_form.text_field :confirmation, placeholder: 'confirmation'
-          %td= item_form.text_field :amount, placeholder: 'amount'
-          %td
-            =button_tag('Delete', type: 'button', class: 'delete_button', onclick: "removeTransactionItem(#{index});")
-.actions
-  =f.submit 'Save', class: 'save_button', title: 'Click here to save the transaction.'
-  =link_to 'Back', entity_accounts_path(@entity || @transaction.entity), class: 'back_button', title: 'Click here to return to the list of entities.'
+%table#transaction_items_table.table.table-striped
+  %tr
+    %th Account
+    %th Action
+    %th Memo
+    %th Confirmation
+    %th Amount
+  -@items.each_with_index do |item, index|
+    %tr{ id: "transaction_item_#{index}" }
+      %td
+        =hidden_field 'transaction[items_attributes][][id]', item.try(:id)
+        =label_tag 'transaction[items_attributes][][account_id]', 'Account', style: 'display: none'
+        =select_tag 'transaction[items_attributes][][account_id]', grouped_options_for_select(available_accounts(transaction.entity), item.try(:account_id)), include_blank: true, class: 'form-control'
+      %td
+        =label_tag 'transaction[items_attributes][][action]', 'Action', style: 'display: none'
+        =select_tag 'transaction[items_attributes][][action]', options_for_select([:credit, :debit], item.try(:action)), class: 'form-control'
+      %td
+        =label_tag 'transaction[items_attributes][][memo]', 'Memo', style: 'display: none'
+        =text_field_tag 'transaction[items_attributes][][memo]', item.try(:memo), placeholder: 'memo', class: 'form-control'
+      %td
+        =label_tag 'transaction[items_attributes][][confirmation]', 'Confirmation', style: 'display: none'
+        =text_field_tag 'transaction[items_attributes][][confirmation]', item.try(:confirmation), placeholder: 'confirmation', class: 'form-control'
+      %td
+        =label_tag 'transaction[items_attributes][][amount]', 'Amount', style: 'display: none'
+        =text_field_tag 'transaction[items_attributes][][amount]', item.try(:amount), placeholder: 'amount', class: 'form-control'
+.actions.btn-group
+  =submit_tag 'Save', class: 'btn btn-primary', title: 'Click here to save the transaction.'
+  =link_to 'Back', entity_accounts_path(@entity || @transaction.entity), class: 'btn btn-default', title: 'Click here to return to the list of entities.'
