--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -4,4 +4,4 @@
   .col-md-6
     =render 'accounts_table', accounts: @accounts
     .actions.btn-group
-      =link_to 'Add', new_entity_account_path(@entity), class: 'btn btn-default', title: 'Click here to add an account.'
+      =link_to 'Add', new_entity_account_path(@entity), class: 'btn btn-primary', title: 'Click here to add an account.'
