--- a/app/views/entities/_entity_list.html.haml
+++ b/app/views/entities/_entity_list.html.haml
@@ -12,4 +12,4 @@
           .col-md-1
             =delete_link entity_path(entity), 'this entity'
 .btn-group
-  =link_to 'Add', new_entity_path, class: 'btn btn-default'
+  =link_to 'Add', new_entity_path, class: 'btn btn-primary'
