--- a/app/views/transactions/index.html.haml
+++ b/app/views/transactions/index.html.haml
@@ -5,21 +5,20 @@
   .col-md-9
     %table#transactions_table.table.table-striped
       %tr
-        %th Transaction Date
-        %th Description
-        %th Amount
-        %th.action_cell &nbsp;
+        %th.col-md-2 Date
+        %th.col-md-6 Description
+        %th.col-md-2 Amount
+        %th.col-md-2.action_cell &nbsp;
       -@transactions.each do |transaction|
         %tr
           %td= transaction.transaction_date.strftime("%-m/%-d/%Y")
-          %td= link_to(transaction.description, transaction_path(transaction))
+          %td= transaction.description
           %td.text-right= format_currency(transaction.total_credits.abs)
           %td.action_cell
-            .row
-              .col-md-1
-                =link_to transaction_attachments_path(transaction), class: 'btn btn-xs btn-default attachments_button', title: 'Click here to see the attachments for this transaction.' do
-                  %span.glyphicon.glyphicon-paperclip{ aria: {hidden: true}}
-              .col-md-1
-                =delete_link transaction_path(transaction), 'this transaction'
+            .btn-group
+              =edit_link transaction_path(transaction), 'this transaction'
+              =link_to transaction_attachments_path(transaction), class: 'btn btn-xs btn-default attachments_button', title: 'Click here to see the attachments for this transaction.' do
+                %span.glyphicon.glyphicon-paperclip{ aria: {hidden: true}}
+              =delete_link transaction_path(transaction), 'this transaction'
     .btn-group
       =link_to 'Add', new_entity_transaction_path(@entity), class: 'btn btn-primary'
