--- a/app/views/transaction_items/index.html.haml
+++ b/app/views/transaction_items/index.html.haml
@@ -1,19 +1,20 @@
-%h2#page_title #{h @account.name} Transaction items
--if @account.commodities?
-  %ul#nav_3
-    %li= link_to 'view Holdings', holdings_account_path(@account), title: 'Click here to view holdings for this account.'
+=content_for :page_title do
+  #{h @account.name} Transaction items
+  -if @account.commodities?
+    %ul#nav_3
+      %li= link_to 'view Holdings', holdings_account_path(@account), title: 'Click here to view holdings for this account.'
 
-%table#transaction_items_table.list{cellspacing: 0, cellpadding: 0}
+%table#transaction_items_table.table.table-striped
   %tr
-    %th.transaction_date_cell Transaction date
-    %th.description_cell Description
-    %th.account_cell Account
-    %th.reconciled_cell Rec.
-    %th.amount_cell.number_column Amount
-    %th.balance_cell.number_column Balance
-    %th.actions &nbsp;
+    %th.col-md-1.transaction_date_cell Date
+    %th.col-md-3.description_cell Description
+    %th.col-md-3.account_cell Account
+    %th.col-md-1.reconciled_cell Rec.
+    %th.col-md-1.amount_cell.number_column Amount
+    %th.col-md-1.balance_cell.number_column Balance
+    %th.col-md-1.actions &nbsp;
   -@transaction_items.each_with_index do |item, index|
-    %tr{ class: ((index % 2) == 0) ? '' : 'alt_table_row', onclick: 'toggleEditState' }
+    %tr
       %td.transaction_date_cell= format_date(item.transaction.transaction_date)
       %td.description_cell= item.transaction.description
       %td.account_cell= other_account(item)
@@ -21,9 +22,10 @@
       %td.amount_cell.number_column= format_currency(item.polarized_amount)
       %td.balance_cell.number_column= format_currency(item.balance)
       %td.actions
-        =link_to 'Edit', edit_transaction_item_path(item), class: 'edit_button', title: 'Click here to edit the transaction.'
-        =render 'shared/delete_form', resource: item, url: transaction_item_url(item)
-.actions
-  =link_to 'Add', new_account_transaction_item_path(@account), class: 'add_button', title: 'Click here to add a transaction.'
-  =link_to 'Back', entity_accounts_path(@account.entity), class: 'back_button', title: 'Click here to return to the account list.'
-  =link_to 'Reconcile', new_account_reconciliation_path(@account), class: 'reconcile_button', title: 'Click here to reconcile this account against a statement.'
+        .btn-group
+          =edit_link edit_transaction_item_path(item), 'this transaction'
+          =delete_link transaction_item_path(item), 'this transaction'
+.actions.btn-group
+  =link_to 'Add', new_account_transaction_item_path(@account), class: 'btn btn-primary', title: 'Click here to add a transaction.'
+  =link_to 'Back', entity_accounts_path(@account.entity), class: 'btn btn-default', title: 'Click here to return to the account list.'
+  =link_to 'Reconcile', new_account_reconciliation_path(@account), class: 'btn btn-default', title: 'Click here to reconcile this account against a statement.'
