--- a/app/views/transaction_items/new.html.haml
+++ b/app/views/transaction_items/new.html.haml
@@ -1,5 +1,8 @@
-%h2#page_title New Transaction item
+=content_for :page_title do
+  New #{h @account.name} transaction item
 
-=render "shared/errors", :resource => @transaction_item_creator
-=form_tag(account_transaction_items_path(@account), method: :post) do
-  =render 'form_fields', transaction_item_creator: @transaction_item_creator, account: @account
+.row
+  .col-md-4
+    =render "shared/errors", :resource => @transaction_item_creator
+    =form_tag(account_transaction_items_path(@account), method: :post) do
+      =render 'form_fields', transaction_item_creator: @transaction_item_creator, account: @account
