--- a/app/views/reconciliations/new.html.haml
+++ b/app/views/reconciliations/new.html.haml
@@ -1,45 +1,51 @@
-%h2#page_title Reconciliation
+=content_for :page_title do
+  #{h @account.name} reconciliation
 
-=render "shared/errors", :resource => @reconciliation
+.row
+  .col-md-12
+    =render "shared/errors", :resource => @reconciliation
 =form_for([@reconciliation.account, @reconciliation]) do |f|
-  .reconciliation_information
-    %table#reconciliation_table{ cellspacing: 0, cellpadding: 0}
-      %tr
-        %th &nbsp;
-        %th.number_column Date
-        %th.number_column Balance
-      %tr
-        %td Previous
-        %td.number_column.display_cell= format_date(@reconciliation.previous_reconciliation_date)
-        %td.number_column.display_cell= format_currency(@reconciliation.previous_balance)
-      %tr
-        %td Current
-        %td.number_column= f.text_field :reconciliation_date
-        %td.number_column= f.text_field :closing_balance
-      %tr
-        %td Cleared
-        %td &nbsp;
-        %td.number_column.display_cell
-          %span#cleared_balance= format_currency(@reconciliation.reconciled_balance)
-      %tr
-        %td Difference
-        %td &nbsp;
-        %td.number_column.display_cell
-          %span#balance_difference= format_currency(@reconciliation.balance_difference)
-      
-  %table#transactions_table.list{ cellspacing: 0, cellpadding: 0}
-    %tr
-      %th Transaction date
-      %th Description
-      %th.number_column Amount
-      %th.check_column Cleared
-    -@reconciliation.account.transaction_items.unreconciled.each do |item|
-      %tr
-        %td= format_date(item.transaction.transaction_date)
-        %td= item.transaction.description
-        %td.number_column= format_currency(item.polarized_amount)
-        %td.check_column
-          =check_box_tag "reconciliation[items_attributes][][transaction_item_id]", item.id, is_selected(item, @reconciliation)
-  .actions
-    =f.submit 'Save', class: 'save_button', title: 'Click here to complete the reconciliation.'
-    =link_to 'Back', entity_accounts_path(@reconciliation.account.entity), class: 'back_button', title: 'Click here to return to the account list.'
+  .row
+    .col-md-4
+      .reconciliation_information
+        %table#reconciliation_table.table
+          %tr
+            %th &nbsp;
+            %th.text-right Date
+            %th.text-right Balance
+          %tr
+            %td Previous
+            %td.text-right.display_cell= format_date(@reconciliation.previous_reconciliation_date)
+            %td.text-right.display_cell= format_currency(@reconciliation.previous_balance)
+          %tr
+            %td Current
+            %td.text-right= f.text_field :reconciliation_date, value: format_date(@reconciliation.reconciliation_date), class: 'form-control date_field'
+            %td.text-right= f.text_field :closing_balance, class: 'form-control'
+          %tr
+            %td Cleared
+            %td &nbsp;
+            %td.text-right.display_cell
+              %span#cleared_balance= format_currency(@reconciliation.reconciled_balance)
+          %tr
+            %td Difference
+            %td &nbsp;
+            %td.text-right.display_cell
+              %span#balance_difference= format_currency(@reconciliation.balance_difference)
+  .row
+    .col-md-12
+      %table#transactions_table.table.table-striped
+        %tr
+          %th.col-md-2 Date
+          %th.col-md-6 Description
+          %th.col-md-2.text-right Amount
+          %th.col-md-2.text-center Cleared
+        -@reconciliation.account.transaction_items.unreconciled.each do |item|
+          %tr
+            %td= format_date(item.transaction.transaction_date)
+            %td= item.transaction.description
+            %td.text-right= format_currency(item.polarized_amount)
+            %td.text-center
+              =check_box_tag "reconciliation[items_attributes][][transaction_item_id]", item.id, is_selected(item, @reconciliation)
+      .actions.btn-group
+        =f.submit 'Save', class: 'btn btn-primary', title: 'Click here to complete the reconciliation.'
+        =link_to 'Back', entity_accounts_path(@reconciliation.account.entity), class: 'btn btn-default', title: 'Click here to return to the account list.'
