--- a/app/views/prices/_form_fields.html.haml
+++ b/app/views/prices/_form_fields.html.haml
@@ -1,11 +1,9 @@
 .form-group
   =f.label :trade_date
-  %br
   =f.text_field :trade_date, class: 'date_field form-control', autofocus: true
 .form-group
   =f.label :price
-  %br
   =f.number_field :price, {min: 0.0001, step: 0.0001, class: 'form-control'}
-.actions
-  =f.submit 'Save', class: 'save_button', title: 'Click here to save the price.'
-  =link_to 'Back', commodity_prices_path(@commodity), class: 'back_button', title: 'Click here to return to the list of prices.'
+.actions.btn-group
+  =f.submit 'Save', class: 'btn btn-primary', title: 'Click here to save the price.'
+  =link_to 'Back', commodity_prices_path(@commodity), class: 'btn btn-default', title: 'Click here to return to the list of prices.'
