--- a/app/views/prices/index.html.haml
+++ b/app/views/prices/index.html.haml
@@ -1,19 +1,21 @@
-%h2#page_title #{h @commodity.symbol} Prices
+=content_for :page_title do
+  #{h @commodity.symbol} prices
 
 .row
   .col-md-3
-    %table#prices_table.table{ cellspacing: 0, cellpadding: 0}
+    %table#prices_table.table.table-striped
       %tr
-        %th.number_column Trade date
-        %th.number_column Price
+        %th.text-right Trade date
+        %th.text-right Price
         %th.action_cell &nbsp;
       -@prices.each do |price|
         %tr
-          %td.number_column= format_date(price.trade_date)
-          %td.number_column= format_price(price.price)
+          %td.text-right= format_date(price.trade_date)
+          %td.text-right= format_price(price.price)
           %td.action_cell
-            =link_to 'Edit', edit_price_path(price), class: 'edit_button', title: 'Click here to edit this price.'
-            =delete_link price_path(price), 'this price'
-    .actions
-      =link_to 'Add', new_commodity_price_path(@commodity), class: 'add_button', title: 'Click here to add a new price.'
-      =link_to 'Back', entity_commodities_path(@commodity.entity), class: 'back_button', title: 'Click here to return to the list of commodities.'
+            .btn-group
+              =edit_link edit_price_path(price), 'this price'
+              =delete_link price_path(price), 'this price'
+    .actions.btn-group
+      =link_to 'Add', new_commodity_price_path(@commodity), class: 'btn btn-primary', title: 'Click here to add a new price.'
+      =link_to 'Back', entity_commodities_path(@commodity.entity), class: 'btn btn-default', title: 'Click here to return to the list of commodities.'
