--- a/app/views/budgets/_form_fields.html.haml
+++ b/app/views/budgets/_form_fields.html.haml
@@ -1,19 +1,15 @@
 .form-group
   =f.label :name
-  %br
   =f.text_field :name, class: 'form-control', autofocus: true
 .form-group
   =f.label :start_date
-  %br
   =f.text_field :start_date, class: 'form-control date_field'
 .form-group
   =f.label :period
-  %br
   =f.select :period, Budget.all_periods, {}, class: 'form-control'
 .form-group
   =f.label :period_count
-  %br
   =f.text_field :period_count, type: :number, class: 'form-control'
-.actions
-  =f.submit "Save", class: 'save_button', title: 'Click here to save the budget.'
-  =link_to "Back", entity_budgets_path(budget.entity), class: 'back_button', title: 'Click here to return the list of budgets.'
+.actions.btn-group
+  =f.submit "Save", class: 'btn btn-primary', title: 'Click here to save the budget.'
+  =link_to "Back", entity_budgets_path(budget.entity), class: 'btn btn-default', title: 'Click here to return the list of budgets.'
